tests/snapshots/tbir__rom_lut_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"rom_lut_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: RomLutTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VRomLut.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct RomCov {
    struct {
        uint64_t a0 = 0;
        uint64_t a1 = 0;
        uint64_t a2 = 0;
        uint64_t a3 = 0;
        uint64_t a4 = 0;
        uint64_t a5 = 0;
        uint64_t a6 = 0;
        uint64_t a7 = 0;
    } cp_addr;

    void report() const {
        uint64_t _total = 8; uint64_t _hit = 0;
        if (cp_addr.a0 > 0) _hit++;
        if (cp_addr.a1 > 0) _hit++;
        if (cp_addr.a2 > 0) _hit++;
        if (cp_addr.a3 > 0) _hit++;
        if (cp_addr.a4 > 0) _hit++;
        if (cp_addr.a5 > 0) _hit++;
        if (cp_addr.a6 > 0) _hit++;
        if (cp_addr.a7 > 0) _hit++;
        harc_rt::log::harc_print_covergroup_summary("RomCov", _hit, _total);
        harc_rt::log::harc_cov_json_summary("RomCov", _hit, _total);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a0", cp_addr.a0);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a0", cp_addr.a0);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a1", cp_addr.a1);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a1", cp_addr.a1);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a2", cp_addr.a2);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a2", cp_addr.a2);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a3", cp_addr.a3);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a3", cp_addr.a3);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a4", cp_addr.a4);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a4", cp_addr.a4);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a5", cp_addr.a5);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a5", cp_addr.a5);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a6", cp_addr.a6);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a6", cp_addr.a6);
        harc_rt::log::harc_print_covergroup_bin("cp_addr", "a7", cp_addr.a7);
        harc_rt::log::harc_cov_json_bin("RomCov", "cp_addr", "a7", cp_addr.a7);
    }
};

struct RomLutTb {
    VRomLut* dut = nullptr;
    RomCov cov;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VRomLut* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_RomLutTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VRomLut;
    auto* dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto* tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "RomLut", "RomLutTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    auto eval_clocks_until = [&](long long t_ps) {
        if (t_ps <= now_ps) return;
        now_ps = t_ps;
        dut->eval();
        _harc_trace_dump_at((uint64_t)now_ps, "", (uint64_t)cycle_count);
        if (_trace_time <= (uint64_t)now_ps) _trace_time = (uint64_t)now_ps + 1;
    };

    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    // Route an empty-queue pop through the sim's own FATAL path instead
    // of the runtime header's abort backstop: the run records the
    // failure, unwinds normally, and still writes its log and trace.
    // `_fatal` is a loop-exit condition, so the run stops at the next
    // scheduler tick — same semantics as `log(fatal, ...)`. Emitted
    // verbatim by both codegens so the two traces stay diffable.
    harc_rt::HarcQueueFatalScope _queue_fatal_scope([&]() {
        sim_log_line("FATAL", "pop() on an empty queue -- guard it with .empty()/.size(), or wait until the producer has pushed");
        ctx.errors++;
        _fatal = true;
    });

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    RomLutTb _tb;
    _checkers.push_back([&]() {
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->rd_addr));
            if (((_v == 0))) _tb.cov.cp_addr.a0++;
            if (((_v == 1))) _tb.cov.cp_addr.a1++;
            if (((_v == 2))) _tb.cov.cp_addr.a2++;
            if (((_v == 3))) _tb.cov.cp_addr.a3++;
            if (((_v == 4))) _tb.cov.cp_addr.a4++;
            if (((_v == 5))) _tb.cov.cp_addr.a5++;
            if (((_v == 6))) _tb.cov.cp_addr.a6++;
            if (((_v == 7))) _tb.cov.cp_addr.a7++;
        }
    });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    auto _run_slot_lambda = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_RomLutTest (TB-IR loop-switch)
            uint64_t __t0 = 0; (void)__t0;
            uint64_t addr = 0; (void)addr;
            uint64_t __t1 = 0; (void)__t1;
            uint64_t addr_2 = 0; (void)addr_2;
            uint64_t __t2 = 0; (void)__t2;
            uint64_t addr_3 = 0; (void)addr_3;
            uint64_t __t3 = 0; (void)__t3;
            uint64_t addr_4 = 0; (void)addr_4;
            uint64_t __t4 = 0; (void)__t4;
            uint64_t addr_5 = 0; (void)addr_5;
            uint64_t __t5 = 0; (void)__t5;
            uint64_t addr_6 = 0; (void)addr_6;
            uint64_t __t6 = 0; (void)__t6;
            uint64_t addr_7 = 0; (void)addr_7;
            uint64_t __t7 = 0; (void)__t7;
            uint64_t addr_8 = 0; (void)addr_8;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rd_addr, 0);
                    harc_rt::harc_assign(dut->rd_en, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 1;
                    break;
                }
                case 1: {
                    __t0 = 0;
                    addr = 0;
                    harc_rt::harc_assign(dut->rd_addr, addr);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 3;
                    break;
                }
                case 2: {
                    if (!((__t0 == 0))) {
                        sim_log_line("FAIL", "addr 0: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t1 = 0;
                    addr_2 = 1;
                    harc_rt::harc_assign(dut->rd_addr, addr_2);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 5;
                    break;
                }
                case 3: {
                    __t0 = harc_rt::harc_read(dut->rd_data);
                    __bb = 2;
                    break;
                }
                case 4: {
                    if (!((__t1 == 49))) {
                        sim_log_line("FAIL", "addr 1: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t2 = 0;
                    addr_3 = 2;
                    harc_rt::harc_assign(dut->rd_addr, addr_3);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 7;
                    break;
                }
                case 5: {
                    __t1 = harc_rt::harc_read(dut->rd_data);
                    __bb = 4;
                    break;
                }
                case 6: {
                    if (!((__t2 == 90))) {
                        sim_log_line("FAIL", "addr 2: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t3 = 0;
                    addr_4 = 3;
                    harc_rt::harc_assign(dut->rd_addr, addr_4);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 9;
                    break;
                }
                case 7: {
                    __t2 = harc_rt::harc_read(dut->rd_data);
                    __bb = 6;
                    break;
                }
                case 8: {
                    if (!((__t3 == 118))) {
                        sim_log_line("FAIL", "addr 3: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t4 = 0;
                    addr_5 = 4;
                    harc_rt::harc_assign(dut->rd_addr, addr_5);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 11;
                    break;
                }
                case 9: {
                    __t3 = harc_rt::harc_read(dut->rd_data);
                    __bb = 8;
                    break;
                }
                case 10: {
                    if (!((__t4 == 127))) {
                        sim_log_line("FAIL", "addr 4: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t5 = 0;
                    addr_6 = 5;
                    harc_rt::harc_assign(dut->rd_addr, addr_6);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 13;
                    break;
                }
                case 11: {
                    __t4 = harc_rt::harc_read(dut->rd_data);
                    __bb = 10;
                    break;
                }
                case 12: {
                    if (!((__t5 == 118))) {
                        sim_log_line("FAIL", "addr 5: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t6 = 0;
                    addr_7 = 6;
                    harc_rt::harc_assign(dut->rd_addr, addr_7);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 15;
                    break;
                }
                case 13: {
                    __t5 = harc_rt::harc_read(dut->rd_data);
                    __bb = 12;
                    break;
                }
                case 14: {
                    if (!((__t6 == 90))) {
                        sim_log_line("FAIL", "addr 6: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    __t7 = 0;
                    addr_8 = 7;
                    harc_rt::harc_assign(dut->rd_addr, addr_8);
                    harc_rt::harc_assign(dut->rd_en, 1);
                    for (int _w = 0; _w < 1; _w++) tick();
                    __bb = 17;
                    break;
                }
                case 15: {
                    __t6 = harc_rt::harc_read(dut->rd_data);
                    __bb = 14;
                    break;
                }
                case 16: {
                    if (!((__t7 == 49))) {
                        sim_log_line("FAIL", "addr 7: got 0x%02llx", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->rd_data)));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: 8 ROM entries match the inline-init pattern");
                    __done = true;
                    break;
                }
                case 17: {
                    __t7 = harc_rt::harc_read(dut->rd_data);
                    __bb = 16;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        { // check_RomLutTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    _tb.cov.report();
                    if (!((_tb.cov.cp_addr.a0 > 0))) {
                        sim_log_line("FAIL", "addr 0 coverage hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_addr.a7 > 0))) {
                        sim_log_line("FAIL", "addr 7 coverage hole");
                        ctx.errors++;
                    }
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    };
    _run_slot.thread = _run_slot_lambda(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    now_ps = (long long)_trace_time;
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_RomLutTest(argc, argv);
    if (std::strcmp(test_sel, "RomLutTest") == 0) return run_RomLutTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "RomLutTest");
    return 1;
}
